# SPIGOT

./: .gitattributes  README.md  install_deps.sh
AD3/: CMakeLists.txt  ChangeLog  MANIFEST.in  Makefile  README
AD3/ad3/: Factor.cpp  Factor.h  Makefile  (+6 more)
SDPClassification/: CMakeLists.txt  eval.sh  train.sh
SDPClassification/src/semantic_parser/: BiLSTM.cpp  BiLSTM.h  CMakeLists.txt  Classifier.cpp  Classifier.h  NeurboParser.cpp  ProjectSimplex.cpp  ProjectSimplex.h  SemanticDecoder.cpp  SemanticDecoder.h  SemanticDictionary.cpp  SemanticDictionary.h  SemanticInstanceNumeric.cpp  SemanticInstanceNumeric.h  SemanticOptions.cpp  SemanticOptions.h  SemanticParser.cpp  SemanticParser.h  SemanticPart.cpp  SemanticPipe.cpp  SemanticPipe.h  SemanticPruner.cpp  SemanticPruner.h  SemanticReader.cpp  SemanticReader.h  SemanticWriter.cpp  SemanticWriter.h  expr.cpp  expr.h  nodes-argmax-proj-sdp.cpp  nodes-argmax-proj-sdp.h  nodes-argmax-proj-singlehead.cpp  nodes-argmax-proj01.cpp  nodes-argmax-proj01.h  nodes-argmax-ste.cpp  nodes-argmax-ste.h
SyntacticSemanticParsing/: CMakeLists.txt  eval.sh  train.sh
SyntacticSemanticParsing/src/parser/: CMakeLists.txt  DependencyDecoder.cpp  DependencyDecoder.h  DependencyDictionary.cpp  DependencyPart.cpp  DependencyReader.cpp  DependencyWriter.cpp  FactorTree.h
SyntacticSemanticParsing/src/semantic_parser/: BiLSTM.cpp  BiLSTM.h  CMakeLists.txt  Dependency.cpp  Dependency.h  DependencyPruner.cpp  DependencyPruner.h  NeurboParser.cpp  ProjectSimplex.cpp  ProjectSimplex.h  SemanticDecoder.cpp  SemanticDecoder.h  SemanticDictionary.cpp  SemanticDictionary.h  SemanticInstanceNumeric.cpp  SemanticOptions.cpp  SemanticOptions.h  SemanticParser.cpp  SemanticParser.h  SemanticPart.cpp  SemanticPipe.cpp  SemanticPipe.h  SemanticPruner.cpp  SemanticPruner.h  SemanticReader.cpp  SemanticReader.h  SemanticWriter.cpp  StructuredAttention.cpp  StructuredAttention.h  expr.cpp  expr.h  nodes-argmax-proj-singlehead.h  nodes-argmax-proj.cpp  nodes-argmax-proj.h  nodes-argmax-proj01.cpp  nodes-argmax-proj01.h
embedding/: glove.100.pruned  glove.100.sst.pruned  glove.300.sst.pruned
(+51 files in other folders)
